# agent

./: .gitignore  README.md  hello.py  main.py  pyproject.toml
01_helloworld/: LangChainV0.3.py  LangChainV1.0.py  StandardDesc.py
02_models_io/: ModelIO_DeepSeek.py  ModelIO_Params.py  zhipuModel.py
03_ollama/: LangChain_Ollama.py
04_prompt/chat_prompt_template/: ChatPromptTemplate_Constructor.py  ChatPromptTemplate_FormatMessages.py
04_prompt/invoke/: LLM_Batch.py  LLM_Invoke.py  LLM_aBatch.py  LLM_aStream.py
04_prompt/load_external/: PromptLoadDemo02.py
04_prompt/prompt_templates/: PromptTemplate_Constructor.py  PromptTemplate_PartialVariables.py
05_parser/: JsonOutputParserDemo.py  JsonOutputParser_GetFormatInstructions.py  StrOutputParserDemo.py  StructuredOutput_Pydantic.py  StructuredOutput_TypedDict.py
06_lcel/: LCEL_RunnableBranchDemo.py  LCEL_RunnableLambdaDemo.py  LCEL_RunnableParallelDemo.py  LCEL_RunnableSequenceDemo.py  practice.py
07_memory/: Memory_RedisChatMessageHistory.py  Memory_RunnableWithMessageHistory.py  Memory_RunnableWithMessageHistoryV2.py  practice.py
08_tools/: LLMQueryWeatherDemo.py  Tool_AddNumberTool.py  Tool_AddNumberToolPro.py
08_tools/practice/: main.py  search.py
09_embedding/: EmbeddingStoreRedis.py  Text2Embedding_CosSimilarity.py  Text2Embedding_DashScope.py  Text2Embedding_DashScopeHello.py  Text2Embedding_DashScopePro.py  Text2Embedding_OpenAiHello.py  practice.py
10_rag/: EmbeddingRagLLM.py  RedisVectorStore.py  RedisVectorStore_SimilaritySearch.py  practiceChroma.py  practiceRAG.py  practiceRAGV2.py
(+10 files in other folders)
